--- a/demos/dashboards-rna-news/demo.html
+++ b/demos/dashboards-rna-news/demo.html
@@ -6,9 +6,10 @@
         <script src="https://code.highcharts.com/dashboards/datagrid.js"></script>
         <script src="https://code.highcharts.com/highcharts.js"></script>
         <script src="../../code/connectors-morningstar.src.js"></script>
-        <title>RNA News Demo - Morningstar Connectors Demos</title>
+        <title>Highcharts Dashboards + Morningstar RNA News</title>
     </head>
     <body>
+        <h1>Highcharts Dashboards + Morningstar RNA News</h1>
         <p>
             Add your Postman environment file from Morningstar to start the demo:
             <input type="file" id="postman-json" accept=".json,application/json" />
