--- a/demos/dashboards-rna-news/demo.html
+++ b/demos/dashboards-rna-news/demo.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="demo.css" />
         <script src="https://code.highcharts.com/dashboards/datagrid.js"></script>
         <script src="https://code.highcharts.com/highcharts.js"></script>
-        <script src="../../code/connectors-morningstar.src.js"></script>
+        <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar.src.js"></script>
         <title>Highcharts Dashboards + Morningstar RNA News</title>
     </head>
     <body>
